--- a/index.html
+++ b/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="favicon.jpg" type="image/x-icon" />
+    <title>Equipos</title>
+    <script src="js/equipos.js"></script>
+    <script src="js/index.js"></script>
+    <script src="js/scripts.js" defer></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Equipos</title>
-  <script src="js/equipos.js"></script>
-  <!-- Carga aquí tu JS -->
-  <script src="js/scripts.js" defer></script>
-</head>
-
-<body>
-</body>
-
+  <body></body>
 </html>
