--- a/index.html
+++ b/index.html
@@ -5,11 +5,62 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="favicon.jpg" type="image/x-icon" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+      integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
+      crossorigin="anonymous"
+    />
     <title>Equipos</title>
     <script src="js/equipos.js"></script>
     <script src="js/index.js"></script>
     <script src="js/scripts.js" defer></script>
   </head>
 
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="row">
+        <main class="container-principal col-md-8">
+          <div class="row">
+            <button class="boton gt30 bg-warning btn col-3 col-lg-4"></button
+            ><button
+              class="boton tarragona bg-warning btn col-3 col-lg-4"
+            ></button
+            ><button
+              class="boton provincias bg-warning btn col-3 col-lg-4"
+            ></button
+            ><button
+              class="boton puestos bg-warning btn col-3 col-lg-4"
+            ></button
+            ><button
+              class="boton edad-media bg-warning btn col-3 col-lg-4"
+            ></button
+            ><button
+              class="boton orden-edad bg-warning btn col-3 col-lg-4"
+            ></button
+            ><button
+              class="boton sobremesa bg-warning btn col-3 col-lg-4"
+            ></button
+            ><button
+              class="boton trabajadores-portatil bg-warning btn col-3 col-lg-4"
+            ></button
+            ><button
+              class="boton equipos-tipo bg-warning btn col-3 col-lg-4"
+            ></button
+            ><button
+              class="boton portatiles-tarragona bg-warning btn col-3 col-lg-4"
+            ></button
+            ><button
+              class="boton resumen bg-warning btn col-3 col-lg-4"
+            ></button>
+          </div>
+        </main>
+
+        <aside class="barra-lateral row col-md-4">
+          <div class="simulador-code"></div>
+        </aside>
+      </div>
+    </div>
+  </body>
 </html>
