Contenido y estilo de botones y aside

--- a/index.html
+++ b/index.html
@@ -19,46 +19,78 @@
   </head>
 
   <body>
-    <div class="container">
-      <div class="row">
-        <main class="container-principal col-md-8">
-          <div class="row">
-            <button class="boton gt30 bg-warning btn col-3 col-lg-4"></button
-            ><button
-              class="boton tarragona bg-warning btn col-3 col-lg-4"
-            ></button
-            ><button
-              class="boton provincias bg-warning btn col-3 col-lg-4"
-            ></button
-            ><button
-              class="boton puestos bg-warning btn col-3 col-lg-4"
-            ></button
-            ><button
-              class="boton edad-media bg-warning btn col-3 col-lg-4"
-            ></button
-            ><button
-              class="boton orden-edad bg-warning btn col-3 col-lg-4"
-            ></button
-            ><button
-              class="boton sobremesa bg-warning btn col-3 col-lg-4"
-            ></button
-            ><button
-              class="boton trabajadores-portatil bg-warning btn col-3 col-lg-4"
-            ></button
-            ><button
-              class="boton equipos-tipo bg-warning btn col-3 col-lg-4"
-            ></button
-            ><button
-              class="boton portatiles-tarragona bg-warning btn col-3 col-lg-4"
-            ></button
-            ><button
-              class="boton resumen bg-warning btn col-3 col-lg-4"
-            ></button>
+    <div class="container-fluid">
+      <div class="row contenedor-row">
+        <main class="contenedor-principal col-lg-8">
+          <div class="row py-2">
+            <div class="contenedor-boton col-4 col-lg-3">
+              <button class="boton gt30 bg-warning btn">
+                Equipos asignados a mayores de 30
+              </button>
+            </div>
+            <div class="contenedor-boton col-4 col-lg-3">
+              <button class="boton tarragona bg-warning btn">
+                Equipos asignados a personas de Tarragona
+              </button>
+            </div>
+            <div class="contenedor-boton col-4 col-lg-3">
+              <button class="boton provincias bg-warning btn">
+                Provincias donde hay equipos
+              </button>
+            </div>
+            <div class="contenedor-boton col-4 col-lg-3">
+              <button class="boton puestos bg-warning btn">
+                Puestos de trabajadores con equipo
+              </button>
+            </div>
+            <div class="contenedor-boton col-4 col-lg-3">
+              <button class="boton edad-media bg-warning btn">
+                Media de edad de trabajadores
+              </button>
+            </div>
+            <div class="contenedor-boton col-4 col-lg-3">
+              <button class="boton orden-edad bg-warning btn">
+                Equipos ordenados por edad
+              </button>
+            </div>
+            <div class="contenedor-boton col-4 col-lg-3">
+              <button class="boton sobremesa bg-warning btn">
+                Equipos de tipo sobremesa
+              </button>
+            </div>
+            <div class="contenedor-boton col-4 col-lg-3">
+              <button class="boton trabajadores-portatil bg-warning btn">
+                Trabajadores con equipo portátil
+              </button>
+            </div>
+            <div class="contenedor-boton col-4 col-lg-3">
+              <button class="boton equipos-tipo bg-warning btn">
+                Equipos organizados por tipo
+              </button>
+            </div>
+            <div class="contenedor-boton col-4 col-lg-3">
+              <button class="boton portatiles-tarragona bg-warning btn">
+                Equipos portátiles asignados en Tarragona
+              </button>
+            </div>
+            <div class="contenedor-boton col-4 col-lg-3">
+              <button class="boton resumen bg-warning btn">
+                Resumen de equipos asignados
+              </button>
+            </div>
           </div>
         </main>
 
-        <aside class="barra-lateral row col-md-4">
-          <div class="simulador-code"></div>
+        <aside
+          class="
+            barra-lateral
+            row
+            col-lg-4
+            justify-content-center
+            align-items-center
+          "
+        >
+          <div class="consola"></div>
         </aside>
       </div>
     </div>
