Correccion layout y color consola

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
         <aside
           class="
             barra-lateral
-            row
             col-lg-4
+            d-flex
             justify-content-center
             align-items-center
           "
