--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <div class="container-fluid">
       <div class="row contenedor-row">
-        <main class="contenedor-principal col-lg-8">
+        <main class="contenedor-principal col-7 col-lg-8">
           <div class="row py-2">
             <div class="contenedor-boton col-4 col-lg-3">
               <button class="boton gt30 bg-warning btn">
@@ -84,7 +84,7 @@
         <aside
           class="
             barra-lateral
-            col-lg-4
+            col-5 col-lg-4
             d-flex
             justify-content-center
             align-items-center
